--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -31,7 +31,7 @@
             margin-left: 1em;
         }
         @media (max-width: $mx-col-sm) {
-            margin-left: 0.66666em;
+            margin-left: 0;
         }
     }
     .comment-respond{
@@ -168,7 +168,7 @@
         padding: 1.5em 2.14em;
     }
     @media(max-width: $mx-col-sm) {
-        padding: 1.5em 1em;
+        padding: 1.5em 2em;
     }
     
     /*  1 - Textarea Styles */
@@ -272,7 +272,7 @@
                 background: transparent;
                 margin-bottom: 0;
                 @media (max-width: $mx-col-sm) {
-                    padding: 0 0 0 .5em;
+                    padding: 0;
                 }
             }
             .children {
