--- a/sass/site/layout/_layout.scss
+++ b/sass/site/layout/_layout.scss
@@ -112,7 +112,7 @@ body{
 	@media (max-width: $mx-col-sm) {
 		.ast-article-post,
 		.ast-article-single{
-		    padding: 1.5em 1em;
+		    padding: 1.5em 2em;
 		}
 		#secondary{
 			padding-top: 0;
